iterateFilesOfSuffix按后缀筛选